# OnePassSynthesisDMFB

./: .gitignore  README  README.md
doc/: readme.aux  readme.fdb_latexmk  readme.fls  readme.org  readme.tex  readme.toc  readme.xdv
doc/auto/: readme.el
solutions/PCR/: input.dot  time1.dot  time10.dot  time11.dot  time13.dot  time14.dot  time15.dot  time16.dot  time2.dot  time3.dot  time4.dot  time5.dot  time6.dot  time7.dot  time8.dot
solutions/Simple_Mix/: input.dot  time1.dot  time2.dot  time3.dot  time4.dot  time5.dot  time6.dot
solutions/Simple_Mix2/: time1.dot  time10.dot  time2.dot  time3.dot  time5.dot  time6.dot  time7.dot  time8.dot  time9.dot
solutions/Simple_Mix2_Detect/: input.dot  time1.dot  time12.dot  time13.dot  time14.dot  time3.dot  time5.dot  time7.dot  time9.dot
solutions/Simple_Mix_Detect/: Simple_Mix_Detect.txt  input.dot  time1.dot  time2.dot  time3.dot  time4.dot  time5.dot  time6.dot
src/: CMakeLists.txt  Graph.cpp  Graph.h  Node.cpp  Node.h  Solver.cpp  Solver.h  main.cpp
testcase/: LICENSE  Simple_Mix.txt  Simple_Mix2.txt  Simple_Mix2_Detect.txt  Single_2_Input_Mix.txt  Single_Mix.txt  Single_Mix2.txt
